# <https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html#metadata>
[metadata]
name = hopla
# TODO: turn this into `attr:` <https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html>
version = 0.0.9-alpha
author = melvio
description = an CLI to interact with the habitica.com API
long_description = file: README.md
# https://datatracker.ietf.org/doc/html/rfc7763
long_description_content_type = text/markdown
license_files = file: LICENSE
keywords = cli, habitica, productivity
url = https://github.com/melvio/hopla



# <https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html#options>
[options]
package_dir =
    =src
packages = find_namespace:
install_requires =
    requests
    Click
    jq

[options.packages.find]
where = src

[options.entry_points]
# syntax: short_name = package.module:function
console_scripts =
    hopla = hopla:entry_cmd
