# <https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html#metadata>
[metadata]
name = hopla-cli
# TODO: turn this into `attr:` <https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html>
version = 0.0.12-alpha
author = melvio
author_email = hopla.pypi@gmail.com
description = Hopla is a CLI to interact with the habitica.com API
long_description = file: README.md
# https://datatracker.ietf.org/doc/html/rfc7763
long_description_content_type = text/markdown
license = Apache-2.0
license_files = file: LICENSE
keywords = cli, habitica, productivity, todo, tasks
url = https://github.com/melvio/hopla
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
    Topic :: Utilities


# <https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html#options>
[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.8
install_requires =
    requests
    Click

[options.packages.find]
where = src
exclude = hopla.tests

[options.entry_points]
# syntax: short_name = package.module:function
console_scripts =
    hopla = hopla:entry_cmd
