# <https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html#metadata>
[metadata]
name = hopla-cli
version = attr: hopla.__version__
author = melvio
author_email = hopla.pypi@gmail.com
description = Hopla is a CLI to interact with the habitica.com API
long_description = file: README.md
# https://datatracker.ietf.org/doc/html/rfc7763
long_description_content_type = text/markdown
license = Apache-2.0
license_files = file: LICENSE
keywords = cli, habitica, productivity, todo, tasks
url = https://github.com/melvio/hopla
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Environment :: Console
    Natural Language :: English
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
    Topic :: Utilities
project_urls =
    Source = https://github.com/melvio/hopla/
    Readme = https://github.com/melvio/hopla/blob/main/README.md
    License = https://github.com/melvio/hopla/blob/main/LICENSE
    Issue Tracker = https://github.com/melvio/hopla/issues/
    Stackoverflow Account = https://stackoverflow.com/users/12520740/melvio
    Wiki = https://habitica.fandom.com/wiki/Hopla
    PyPi = https://pypi.org/project/hopla-cli/


# <https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html#options>
[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.8
install_requires =
    requests
    Click

[options.packages.find]
where = src
exclude = hopla.tests

[options.entry_points]
# syntax: short_name = package.module:function
console_scripts =
    hopla = hopla:setup_hopla_application
